--- a/book.html
+++ b/book.html
@@ -2,14 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Social Media Management</title>
+    <title>Book Now| KG Creative</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
-
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
       <!-- Font Awesome Icons -->
 <link rel="stylesheet" 
 href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" 
@@ -81,31 +76,29 @@ referrerpolicy="no-referrer" />
     </nav>
   </div>
 </header>
-    <section class="page-hero">
-    <div class="container">
-        <h1>Social Media Management</h1>
-        <p class="page-subtitle">
-              Documenting impactful corporate moments and dynamic events with authenticity, precision and purpose.
-        </p>
-    </div>
-</section>
 
-<section class="gallery-section container">
-    <div class="gallery-grid">
-        <img src="images/family1.jpg" alt="">
-        <img src="images/family2.jpg" alt="">
-        <img src="images/family3.jpg" alt="">
-        <img src="images/family4.jpg" alt="">
-        <img src="images/family5.jpg" alt="">
-        <img src="images/family6.jpg" alt="">
-    </div>
-</section>
+    <section class="contact-page container">
+        <h1>Book With Us Today</h1>
+        <p>Fill out the form or reach out via WhatsApp or email.</p>
 
-<section class="service-cta container">
-    <a href="book.html" class="btn-primary">Book This Service</a>
-</section>
+        <form>
+            <label for="name">Name:</label>
+            <input type="text" id="name" placeholder="Your Name">
 
-<footer>
-    <p>© 2026 KG Creative | Nairobi, Kenya</p>
-</footer>
+            <label for="email">Email:</label>
+            <input type="email" id="email" placeholder="Your Email">
+
+            <label for="message">Message:</label>
+            <textarea id="message" placeholder="Your Message"></textarea>
+
+            <button type="submit" class="btn-primary">Send Message</button>
+        </form>
+
+        <p>Or contact via WhatsApp: +254 722789124</p>
+    </section>
+
+    <footer>
+        <p>© 2026 KG Creative | Nairobi, Kenya</p>
+    </footer>
 </body>
+</html>
