--- a/contact.html
+++ b/contact.html
@@ -5,47 +5,82 @@
     <title>Contact | KG Creative</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+      <!-- Font Awesome Icons -->
+<link rel="stylesheet" 
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" 
+integrity="sha512-..." 
+crossorigin="anonymous" 
+referrerpolicy="no-referrer" />
 </head>
 <body>
-    <header class="navbar">
-        <div class="container">
-            <div class="logo">KG Creative</div>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                     <li class="dropdown">
-                    <a href="services.html">Services ▾</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="photography.html">Photography</a></li>
-                        <li><a href="design.html">Graphic Design</a></li>
-                        <li><a href="social.html">Social Media Management</a></li>
-                    </ul>
-                </li>
-                    <li><a href="contact.html" class="active btn-primary">Book Now</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <!-- Navbar -->
+<header class="navbar">
+  <div class="container">
+    <div class="logo">KG Creative</div>
 
+    <nav>
+      <ul>
+        <li>
+          <a class="nav-link active" href="index.html">
+            <i class="fa-solid fa-house"></i> Home
+          </a>
+        </li>
+
+        <li>
+          <a class="nav-link" href="about.html">
+            <i class="fa-solid fa-user"></i> About
+          </a>
+        </li>
+
+        <li class="dropdown">
+          <a class="nav-link" href="services.html">
+            <i class="fa-solid fa-briefcase"></i> Services ▾
+          </a>
+          <ul class="dropdown-menu">
+            <li>
+              <a href="photography.html">
+                <i class="fa-solid fa-camera"></i> Photography
+              </a>
+            </li>
+            <li>
+              <a href="design.html">
+                <i class="fa-solid fa-pen-nib"></i> Graphic Design
+              </a>
+            </li>
+            <li>
+              <a href="social.html">
+                <i class="fa-solid fa-hashtag"></i> Social Media Management
+              </a>
+            </li>
+          </ul>
+        </li>
+
+        <li>
+          <a class="nav-link" href="portfolio.html">
+            <i class="fa-solid fa-images"></i> Portfolio
+          </a>
+        </li>
+
+        <li>
+          <a class="nav-link" href="contact.html">
+            <i class="fa-solid fa-envelope"></i> Contact Us
+          </a>
+        </li>
+
+        <li>
+          <a href="book.html" class="btn-primary">
+            <i class="fa-solid fa-calendar-check"></i> Book Now
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+</header>
     <section class="contact-page container">
-        <h1>Contact KG Creative</h1>
-        <p>Fill out the form or reach out via WhatsApp or email.</p>
+        <h1>Contact Us</h1>
+        <p>For any enquires contact us</p>
 
-        <form>
-            <label for="name">Name:</label>
-            <input type="text" id="name" placeholder="Your Name">
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" placeholder="Your Email">
-
-            <label for="message">Message:</label>
-            <textarea id="message" placeholder="Your Message"></textarea>
-
-            <button type="submit" class="btn-primary">Send Message</button>
-        </form>
-
-        <p>Or contact via WhatsApp: +254 722789124</p>
     </section>
 
     <footer>
