--- a/design.html
+++ b/design.html
@@ -10,36 +10,86 @@
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
+      <!-- Font Awesome Icons -->
+<link rel="stylesheet" 
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" 
+integrity="sha512-..." 
+crossorigin="anonymous" 
+referrerpolicy="no-referrer" />
 </head>
 <body>
-    <header class="navbar">
-    <div class="container">
-        <div class="logo">KG Creative</div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+    <!-- Navbar -->
+<header class="navbar">
+  <div class="container">
+    <div class="logo">KG Creative</div>
 
-                <!-- REPLACE THE SERVICES LINK WITH THIS -->
-           <li class="dropdown">
-                    <a href="services.html">Services ▾</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="photography.html">Photography</a></li>
-                        <li><a href="design.html">Graphic Design</a></li>
-                        <li><a href="social.html">Social Media Management</a></li>
-                    </ul>
-                </li>
+    <nav>
+      <ul>
+        <li>
+          <a class="nav-link active" href="index.html">
+            <i class="fa-solid fa-house"></i> Home
+          </a>
+        </li>
 
-                <li><a href="contact.html" class="btn-primary">Book Now</a></li>
-            </ul>
-        </nav>
-    </div>
+        <li>
+          <a class="nav-link" href="about.html">
+            <i class="fa-solid fa-user"></i> About
+          </a>
+        </li>
+
+        <li class="dropdown">
+          <a class="nav-link" href="services.html">
+            <i class="fa-solid fa-briefcase"></i> Services ▾
+          </a>
+          <ul class="dropdown-menu">
+            <li>
+              <a href="photography.html">
+                <i class="fa-solid fa-camera"></i> Photography
+              </a>
+            </li>
+            <li>
+              <a href="design.html">
+                <i class="fa-solid fa-pen-nib"></i> Graphic Design
+              </a>
+            </li>
+            <li>
+              <a href="social.html">
+                <i class="fa-solid fa-hashtag"></i> Social Media Management
+              </a>
+            </li>
+          </ul>
+        </li>
+
+        <li>
+          <a class="nav-link" href="portfolio.html">
+            <i class="fa-solid fa-images"></i> Portfolio
+          </a>
+        </li>
+
+        <li>
+          <a class="nav-link" href="contact.html">
+            <i class="fa-solid fa-envelope"></i> Contact Us
+          </a>
+        </li>
+
+        <li>
+          <a href="book.html" class="btn-primary">
+            <i class="fa-solid fa-calendar-check"></i> Book Now
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
 </header>
     <section class="page-hero">
     <div class="container">
         <h1>Graphic Design Services</h1>
         <p class="page-subtitle">
-                          Creative, professional design solutions that help brands stand out, from logos to social media visuals and marketing materials.
+             Creative, professional design solutions that help brands stand out, from logos to social media visuals and marketing materials.
+        </p>
+        <p>
+            This is where strategy meets craft. I design identities, systems and communication pieces that help brands stay consistent across every touch point. 
+            From schools to small businesses to full campaigns, each project here shows the thinking, structure and visual choices behind clear branded communication.
         </p>
     </div>
 </section>
@@ -56,7 +106,7 @@
 </section>
 
 <section class="service-cta container">
-    <a href="contact.html" class="btn-primary">Book This Service</a>
+    <a href="book.html" class="btn-primary">Book This Service</a>
 </section>
 
 <footer>
