--- a/index.html
+++ b/index.html
@@ -11,37 +11,86 @@
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css" />
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Montserrat:wght@600;700&display=swap" rel="stylesheet" />
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&family=Fraunces:opsz,wght@9..144,600;9..144,700&display=swap" rel="stylesheet">
+  <!-- Font Awesome Icons -->
+<link rel="stylesheet" 
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" 
+integrity="sha512-..." 
+crossorigin="anonymous" 
+referrerpolicy="no-referrer" />
+
 </head>
 
 <body>
-  <!-- Navbar -->
-  <header class="navbar">
-    <div class="container">
-      <div class="logo">KG Creative</div>
-      <nav>
-        <ul>
-          <li><a class="nav-link active" href="index.html">Home</a></li>
-          <li><a class="nav-link" href="about.html">About</a></li>
+<!-- Navbar -->
+<header class="navbar">
+  <div class="container">
+    <div class="logo">KG Creative</div>
+    <button class="nav-toggle" aria-label="Open menu" aria-expanded="false">
+     <i class="fa-solid fa-bars"></i>
+    </button>
+    <nav>
+      <nav id="site-nav"></nav>
+      <ul>
+        <li>
+          <a class="nav-link active" href="index.html">
+            <i class="fa-solid fa-house"></i> Home
+          </a>
+        </li>
 
-           <li class="dropdown">
-                    <a href="services.html">Services ▾</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="photography.html">Photography</a></li>
-                        <li><a href="design.html">Graphic Design</a></li>
-                        <li><a href="social.html">Social Media Management</a></li>
-                    </ul>
-           </li>
+        <li>
+          <a class="nav-link" href="about.html">
+            <i class="fa-solid fa-user"></i> About
+          </a>
+        </li>
 
-          <li><a class="nav-link" href="portfolio.html">Portfolio</a></li>
-          <li><a class="nav-link" href="contact.html">Contact</a></li>
+        <li class="dropdown">
+          <a class="nav-link" href="services.html">
+            <i class="fa-solid fa-briefcase"></i> Services ▾
+          </a>
+          <ul class="dropdown-menu">
+            <li>
+              <a href="photography.html">
+                <i class="fa-solid fa-camera"></i> Photography
+              </a>
+            </li>
+            <li>
+              <a href="design.html">
+                <i class="fa-solid fa-pen-nib"></i> Graphic Design
+              </a>
+            </li>
+            <li>
+              <a href="social.html">
+                <i class="fa-solid fa-hashtag"></i> Social Media Management
+              </a>
+            </li>
+          </ul>
+        </li>
 
-          <li><a href="contact.html" class="btn-primary">Book Now</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+        <li>
+          <a class="nav-link" href="portfolio.html">
+            <i class="fa-solid fa-images"></i> Portfolio
+          </a>
+        </li>
+
+        <li>
+          <a class="nav-link" href="contact.html">
+            <i class="fa-solid fa-envelope"></i> Contact Us
+          </a>
+        </li>
+
+        <li>
+          <a href="book.html" class="btn-primary">
+            <i class="fa-solid fa-calendar-check"></i> Book Now
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+</header>
+
 
   <!-- Hero -->
   <section class="hero">
@@ -51,50 +100,75 @@
 
       <div class="hero-buttons">
         <a href="portfolio.html" class="btn-primary">View Portfolio</a>
-        <a href="contact.html" class="btn-secondary">Book a Session</a>
+        <a href="book.html" class="btn-secondary">Book a Session</a>
       </div>
     </div>
   </section>
 
   <!-- About preview -->
-  <section class="about-preview container">
-    <div class="about-text">
-      <h2>About KG Creative</h2>
-      <p>
-        KG Creative delivers high-quality photography and graphic design services for
-        corporate events, family gatherings, school portraits, and personal sessions.
-        We focus on creativity, precision, and client satisfaction.
-      </p>
-      <a href="about.html" class="btn-primary">Learn More</a>
+<section class="about-preview container">
+  <div class="about-text">
+    <h2>About KG Creative</h2>
+    <p>
+      KG Creative is a Nairobi-based studio offering professional photography, graphic design solutions
+      and social media support for individuals, schools and brands. We focus on clean visuals,
+      authentic moments and work that looks premium 
+    </p>
+
+    <div class="about-highlights">
+      <div class="pill"><i class="fa-solid fa-bolt"></i> Fast turnaround</div>
+      <div class="pill"><i class="fa-solid fa-star"></i> Clean & premium edits</div>
+      <div class="pill"><i class="fa-solid fa-location-dot"></i> Nairobi-based</div>
     </div>
 
-    <!-- Placeholder until images arrive -->
-    <div class="about-image">
-      <div class="media-placeholder">About image coming soon</div>
+    <div class="about-actions">
+      <a href="about.html" class="btn-primary">Learn More</a>
+      <a href="contact.html" class="btn-secondary">Contact</a>
     </div>
-  </section>
+  </div>
+
+  <div class="about-image">
+    <figure class="portrait-card">
+      <img src="images/eric1.jpg" alt="Founder portrait - KG Creative">
+      <figcaption>
+        <span class="name">Eric Kibuga Gitonga</span>
+        <span class="role">Founder • Creative Director</span>
+      </figcaption>
+    </figure>
+  </div>
+</section>
 
   <!-- Services -->
   <section class="services">
     <div class="container">
       <h2 class="section-title">Our Services</h2>
 
-      <div class="service-grid">
-        <a class="card card-link" href="family-gatherings.html">
-          <h3>Photography</h3>
-          <p>Timeless photographs for your special occasions</p>
-        </a>
+     <div class="service-grid">
+  <a class="card card-link service-card" href="photography.html">
+    <div class="service-media" style="background-image:url('./images/camera.jpg');"></div>
+    <div class="service-body">
+      <h3>Photography</h3>
+      <p>Timeless photographs for your special occasions.</p>
+    </div>
+  </a>
 
-        <a class="card card-link" href="corporate.html">
-          <h3>Graphic Design</h3>
-          <p>Professional coverage for conferences, launches, and business events.</p>
-        </a>
+  <a class="card card-link service-card" href="design.html">
+    <div class="service-media" style="background-image:url('./images/design.jpg');"></div>
+    <div class="service-body">
+      <h3>Graphic Design</h3>
+      <p>Branding, posters and digital design that elevates your business.</p>
+    </div>
+  </a>
 
-        <a class="card card-link" href="self-portrait.html">
-          <h3>Social Media Management</h3>
-          <p>Studio and outdoor portraits tailored to your style.</p>
-        </a>
-      </div>
+  <a class="card card-link service-card" href="social.html">
+    <div class="service-media" style="background-image:url('./images/social.jpg');"></div>
+    <div class="service-body">
+      <h3>Social Media Management</h3>
+      <p>Content planning, design and growth strategies for your platforms.</p>
+    </div>
+  </a>
+</div>
+
     </div>
   </section>
 
@@ -103,26 +177,48 @@
     <h2 class="section-title">Featured Work</h2>
 
     <!-- Placeholders until images arrive -->
-    <div class="gallery-grid">
-      <div class="media-placeholder small">Work sample</div>
-      <div class="media-placeholder small">Work sample</div>
-      <div class="media-placeholder small">Work sample</div>
-      <div class="media-placeholder small">Work sample</div>
-      <div class="media-placeholder small">Work sample</div>
-      <div class="media-placeholder small">Work sample</div>
-      <div class="media-placeholder small">Work sample</div>
-      <div class="media-placeholder small">Work sample</div>
+    <section class="portfolio container">
+  <h2 class="section-title">Featured Work</h2>
+
+  <div class="featured-wrap">
+    <button class="featured-btn prev" aria-label="Scroll left">
+      <i class="fa-solid fa-chevron-left"></i>
+    </button>
+
+    <div class="featured-track" id="featuredTrack">
+      <!-- TEMPLATE ITEMS: duplicate these and change src -->
+      <figure class="featured-item">
+        <img src="./images/photograph1.jpg" alt="Featured work 1">
+      </figure>
+      <figure class="featured-item">
+        <img src="./images/photograph5.jpg" alt="Featured work 2">
+      </figure>
+      <figure class="featured-item">
+        <img src="./images/photograph3.jpg" alt="Featured work 3">
+      </figure>
+      <figure class="featured-item">
+        <img src="./images/photograph4.jpg" alt="Featured work 4">
+      </figure>
     </div>
 
+    <button class="featured-btn next" aria-label="Scroll right">
+      <i class="fa-solid fa-chevron-right"></i>
+    </button>
+  </div>
+
+  <div class="center">
+    <a href="portfolio.html" class="btn-primary">View Full Portfolio</a>
+  </div>
+</section>
     <div class="center">
-      <a href="gallery.html" class="btn-primary">View Full Portfolio</a>
+      <a href="portfolio.html" class="btn-primary">View Full Portfolio</a>
     </div>
   </section>
 
   <!-- CTA -->
   <section class="cta">
     <h2>Ready to Capture Your Moment?</h2>
-    <a href="contact.html" class="btn-primary">Book Now</a>
+    <a href="book.html" class="btn-primary">Book Now</a>
   </section>
 
   <!-- Footer -->
@@ -134,9 +230,8 @@
       </div>
 
       <div class="footer-links">
-        <a href="gallery.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
-        <a href="services.html">Services</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact Us</a>
       </div>
 
       <div class="footer-social">
@@ -151,7 +246,7 @@
   </footer>
 
   <!-- Floating WhatsApp (replace number later) -->
-  <a class="whatsapp-float" href="https://wa.me/254700000000" target="_blank" rel="noopener">
+  <a class="whatsapp-float" href="https://wa.me/+254722789124" target="_blank" rel="noopener">
     WhatsApp
   </a>
 </body>
